--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "alembic>=1.16.1",
     "fastapi>=0.115.12",
+    "httpx>=0.28.1",
     "loguru>=0.7.3",
     "passlib>=1.7.4",
     "psycopg>=3.2.9",
