обновил конфиг и докер

--- a/alembic.ini
+++ b/alembic.ini
@@ -142,4 +142,4 @@ format = %(levelname)-5.5s [%(name)s] %(message)s
 datefmt = %H:%M:%S
 
 [alembic:env]
-DATABASE_URL = postgresql://user:password@localhost:5432/cybersec_db
+DATABASE_URL = postgresql+psycopg://postgres:postgres@db:5432/cybersec_db
