--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,10 @@
-version: "3.9"
-
 services:
   db:
     image: postgres:15
     container_name: cybersec-db
     restart: always
-    environment:
-      POSTGRES_DB: cybersec_db
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
+    env_file:
+      - .env
     ports:
       - "5432:5432"
     volumes:
@@ -19,12 +15,12 @@ services:
     container_name: cybersec-app
     depends_on:
       - db
+    env_file:
+      - .env
     ports:
       - "8000:8000"
-    environment:
-      DATABASE_URL: postgresql+psycopg://user:password@db:5432/cybersec_db
     volumes:
-      - .:/app
+      - ./app:/app/app
 
   alembic:
     build:
@@ -32,11 +28,9 @@ services:
     container_name: cybersec-alembic
     depends_on:
       - db
-    command: alembic upgrade head
-    environment:
-      DATABASE_URL: postgresql+psycopg://user:password@db:5432/cybersec_db
-    volumes:
-      - .:/app
+    command: uv run alembic upgrade head
+    env_file:
+      - .env
 
 volumes:
   postgres_data:
