--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,5 +32,12 @@ services:
     env_file:
       - .env
 
+  grafana:
+    image: grafana/grafana-enterprise
+    container_name: grafana
+    restart: unless-stopped
+    ports:
+     - '3000:3000'
+
 volumes:
   postgres_data:
