--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "fastapi[standard]>=0.115.12",
     "httpx>=0.28.1",
     "loguru>=0.7.3",
+    "openpyxl>=3.1.5",
     "passlib>=1.7.4",
     "psycopg[binary]>=3.2.9",
     "pydantic-settings>=2.9.1",
