--- a/loki/rules/fake/anomaly.yaml
+++ b/loki/rules/fake/anomaly.yaml
@@ -2,11 +2,11 @@ groups:
   - name: anomalies
     rules:
       - alert: BehavioralAnomaly
-        expr: count_over_time({job="systemd"} |= `unexpected behavior` [1m]) > 1
+        expr: 'count_over_time({job="systemd"} |= "unexpected behavior" [1m]) >= 1'
         for: 1m
         labels:
-          severity: high
-          category: anomaly
+          severity: Высокий
+          category: Аномальное поведение
           source_type: local
         annotations:
           summary: "Обнаружено нетипичное поведение системы"
