--- a/loki/rules/fake/config.yaml
+++ b/loki/rules/fake/config.yaml
@@ -2,11 +2,11 @@ groups:
   - name: config-change
     rules:
       - alert: SuspiciousConfigChanges
-        expr: count_over_time({job="systemd"} |= `sudo` or `visudo` [1m]) > 2
+        expr: 'count_over_time({job="systemd"} |= "sudo" or "visudo" [1m]) > 2'
         for: 1m
         labels:
-          severity: high
-          category: config
+          severity: Высокий
+          category: Изменение конфигурации
           source_type: server
         annotations:
           summary: "Обнаружены подозрительные изменения конфигурации"
