--- a/loki/rules/fake/files.yaml
+++ b/loki/rules/fake/files.yaml
@@ -2,11 +2,11 @@ groups:
   - name: file-actions
     rules:
       - alert: FileAccessAlert
-        expr: count_over_time({job="systemd"} |= `deleted` or `modified` [1m]) > 10
+        expr: 'count_over_time({job="systemd"} |= "deleted" or "modified" [1m]) > 10'
         for: 1m
         labels:
-          severity: medium
-          category: files
+          severity: Средний
+          category: Работа с файлами
           source_type: workstation
         annotations:
           summary: "Множественные действия с файлами — потенциальная угроза"
