--- a/loki/rules/fake/privilege.yaml
+++ b/loki/rules/fake/privilege.yaml
@@ -2,11 +2,11 @@ groups:
   - name: privilege-escalation
     rules:
       - alert: PrivilegeEscalationAttempt
-        expr: count_over_time({job="systemd"} |= `sudo` or `root` [1m]) > 3
+        expr: 'count_over_time({job="systemd"} |= "sudo" or "root" [1m]) > 3'
         for: 30s
         labels:
-          severity: critical
-          category: privilege
+          severity: Критический
+          category: Повышение привилегий
           source_type: server
         annotations:
           summary: "Попытки повышения привилегий — возможный взлом"
