--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "alembic>=1.16.1",
     "fastapi[standard]>=0.115.12",
     "httpx>=0.28.1",
+    "itsdangerous>=2.2.0",
     "loguru>=0.7.3",
     "openpyxl>=3.1.5",
     "passlib>=1.7.4",
